fixes a horizontal scrolling problem

--- a/app/client/styles/services/mainService.less
+++ b/app/client/styles/services/mainService.less
@@ -34,6 +34,7 @@ html > body.mainService > div.wrapper {
 								position: absolute;
 								top: 50%;
 								left: 50%;
+								right: 25px;
 								.translate(20px, -75%);
 
 								>aside {
